# reclamation-processing

./: .gitignore  .style.yapf  00-Data-Exploration.ipynb  01-prepare-data.ipynb  02-generate-features.ipynb  03-model-generation-3-step-model-all-features.ipynb  03-model-generation-3-step-model-all-models.ipynb  03-model-generation.ipynb  Pipfile  README.md  pyproject.toml
.dvc/: config
Neuro-symbolic-AI/: column.py
baseline/: 01-model-generation.ipynb  02-model-generation.ipynb  03-model-generation.ipynb
data/: .gitignore  export-cleansed-4851f054c66579780503d70880731802.pkl.bz2.dvc  export-raw-oracle_log-674a259ab5d6f3148eae37ef43bf40e8.pkl.bz2.dvc  export_anonymized_features_2016_2020.parquet.gzip.dvc  export_band_descr_stats_2016_2020_v3.parquet.gzip.dvc  export_band_stats_for_range_of_vginkasso_2016_2020.parquet.gzip.dvc  export_features_2016_2020_v1.parquet.gzip.dvc  export_features_2016_2020_v2.parquet.gzip.dvc  export_features_2016_2020_v3.parquet.gzip.dvc  export_features_2016_2020_v4.parquet.gzip.dvc  export_features_2016_2020_v5.parquet.gzip.dvc  export_promoter_descr_stats_2016_2020_v3.parquet.gzip.dvc  export_promotor_stats_for_range_of_vginkasso_2016_2020.parquet.gzip.dvc  export_test_band_descr_stats_2016_2020_v2.parquet.gzip.dvc  export_test_band_stats_for_range_of_vginkasso_2016_2020.parquet.gzip.dvc  export_test_band_stats_for_range_of_vginkasso_2016_2020_v1.parquet.gzip.dvc  export_test_promoter_descr_stats_2016_2020_v2.parquet.gzip.dvc  export_test_promoter_stats_for_range_of_vginkasso_2016_2020.parquet.gzip.dvc  export_test_promoter_stats_for_range_of_vginkasso_2016_2020_v1.parquet.gzip.dvc  export_test_tarif_stats_for_range_of_vginkasso_2016_2020_v1.parquet.gzip.dvc  export_test_venue_descr_stats_2016_2020_v2.parquet.gzip.dvc  export_test_vg_state_stats_for_range_of_vginkasso_2016_2020.parquet.gzip.dvc  export_testing_features_2016_2020.parquet.gzip.dvc  (+19 more)
(+202 files in other folders)
