[tool.poetry]
name = "intellizenz-model-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
tqdm = "^4.64.0"
yapf = "^0.32.0"
nltk = "^3.7"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
xgboost = "^1.6.1"
scikit-learn = "^1.1.1"
pgeocode = "^0.3.0"
seaborn = "^0.11.2"
# Can not install "shap" on ubuntu, is uses a depreacte llvm compiler (9.0.x - 10.0.x). llvm is only available from version 11.0.x

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
